--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "ethers": "^5.6.8",
     "firebase": "^8.2.4",
     "firebase-tools": "^9.2.2",
-    "ipfs-http-client": "42.0.0",
+    "ipfs-http-client": "54.0.1",
+    "moment": "^2.29.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
